--- a/pom.xml
+++ b/pom.xml
@@ -9,18 +9,21 @@
     <artifactId>kafka-sink-azure-kusto</artifactId>
     <packaging>jar</packaging>
     <description>A Kafka Connect plugin for Azure Data Explorer (Kusto) Database</description>
-    <version>4.0.0</version>
+    <version>4.0.1</version>
     <properties>
-        <kafka.version>3.4.0</kafka.version>
-        <junit.version>5.9.2</junit.version>
-        <commonio.version>2.11.0</commonio.version>
         <commoncodec.version>1.15</commoncodec.version>
+        <commonio.version>2.11.0</commonio.version>
         <dependency-check-maven.version>8.1.2</dependency-check-maven.version>
-        <kusto-sdk.version>4.0.3</kusto-sdk.version>
-        <kafka.connect.avro.converter.version>7.3.2</kafka.connect.avro.converter.version>
         <formatter.version>2.20.0</formatter.version>
         <jackson-version>2.14.2</jackson-version>
+        <junit.version>5.9.2</junit.version>
+        <kafka.connect.avro.converter.version>7.3.2</kafka.connect.avro.converter.version>
+        <kafka.version>3.4.0</kafka.version>
+        <kusto-sdk.version>4.0.3</kusto-sdk.version>
         <littleproxy.version>1.1.2</littleproxy.version>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <msal4j.version>1.13.7</msal4j.version>
         <mockito.version>5.2.0</mockito.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -146,7 +149,7 @@
             <dependency>
                 <groupId>com.azure</groupId>
                 <artifactId>azure-sdk-bom</artifactId>
-                <version>1.2.10</version>
+                <version>1.2.11</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -178,6 +181,10 @@
                     <groupId>com.azure</groupId>
                     <artifactId>azure-identity</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>com.microsoft.azure</groupId>
+                    <artifactId>msal4j</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
@@ -187,6 +194,12 @@
         <dependency>
             <groupId>com.azure</groupId>
             <artifactId>azure-identity</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.microsoft.azure</groupId>
+                    <artifactId>msal4j</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.azure</groupId>
@@ -207,6 +220,32 @@
         <dependency>
             <groupId>com.azure</groupId>
             <artifactId>azure-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.microsoft.azure</groupId>
+            <artifactId>msal4j</artifactId>
+            <version>${msal4j.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>net.minidev</groupId>
+                    <artifactId>json-smart</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.nimbusds</groupId>
+                    <artifactId>nimbus-jose-jwt</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <!-- Vulnerability in json-smart 2.4.8 & Nimbus vulns used in msal4j and nimbusds, update when used in further versions -->
+        <dependency>
+            <groupId>net.minidev</groupId>
+            <artifactId>json-smart</artifactId>
+            <version>2.4.10</version>
+        </dependency>
+        <dependency>
+             <groupId>com.nimbusds</groupId>
+            <artifactId>nimbus-jose-jwt</artifactId>
+            <version>9.31</version>
         </dependency>
         <dependency>
             <groupId>com.microsoft.azure.kusto</groupId>
