--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,8 @@
         <kusto.sdk.version>4.0.4</kusto.sdk.version>
         <mvn.assembly.plugin.version>3.2.0</mvn.assembly.plugin.version>
         <mvn.compiler.plugin.version>3.11.0</mvn.compiler.plugin.version>
-        <mvn.surefire.plugin.version>2.22.0</mvn.surefire.plugin.version>
+        <mvn.failsafe.plugin.version>3.0.0</mvn.failsafe.plugin.version>
+        <mvn.surefire.plugin.version>3.0.0</mvn.surefire.plugin.version>
         <mockito.version>5.2.0</mockito.version>
         <!-- Added to override vulnerable deps -->
         <nimbusjose.jwt.version>9.31</nimbusjose.jwt.version>
@@ -109,31 +110,27 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>${mvn.surefire.plugin.version}</version>
-                <configuration>
-                    <excludes>
-                        <exclude>**/*KustoSinkIT.java</exclude>
-                    </excludes>
-                    <parallel>true</parallel>
-                </configuration>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>${mvn.failsafe.plugin.version}</version>
                 <executions>
                     <execution>
-                        <id>integration-test</id>
                         <goals>
-                            <goal>test</goal>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
                         </goals>
-                        <phase>integration-test</phase>
                         <configuration>
-                            <excludes>
-                                <exclude>none</exclude>
-                            </excludes>
                             <includes>
                                 <include>**/*KustoSinkIT.java</include>
                             </includes>
                         </configuration>
                     </execution>
                 </executions>
+<!--                <configuration>-->
+<!--                    <excludes>-->
+<!--                        <exclude>**/*KustoSinkIT.java</exclude>-->
+<!--                    </excludes>-->
+<!--                    <parallel>true</parallel>-->
+<!--                </configuration>-->
             </plugin>
             <plugin>
                 <groupId>net.revelc.code.formatter</groupId>
@@ -287,7 +284,6 @@
         <dependency>
             <groupId>com.azure</groupId>
             <artifactId>azure-core</artifactId>
-            <version>${azure.core.version}</version>
         </dependency>
         <!-- used in msal4j in azure-identity , 2.4.8 has a Vulnerability -->
         <dependency>
